<resources>
    <string name="app_name">Unit Converter</string>
    <string name="title_bar">Universal Unit Converter</string>
    <string name="category_label">Select Conversion Category</string>
    <string name="from_unit">From Unit</string>
    <string name="to_unit">To Unit</string>
    <string name="convert">Convert</string>
    <string name="result_prefix">Result: </string>
    <string name="input_hint">Enter value</string>
    <string name="enter_value_warning">Please enter a value.</string>
    <string name="invalid_input">Invalid input.</string>
    <string name="app_icon">App Icon</string>
</resources>
